# awesome-conference-dates

./: .gitignore  LICENSE  README.md  all_vlsi_conf_names.csv  conf_names.csv  conferences.yml  get_deadlines.py  output.ics  parse_ai_deadlines.py  pyproject.toml  requirements.txt  utils.py  vlsi_conferences.yml
.github/workflows/: auto.yaml  repostats.yaml
luarss/awesome-conference-dates/: README.md
luarss/awesome-conference-dates/ghrs-data/: views_clones_aggregate.csv
luarss/awesome-conference-dates/ghrs-data/snapshots/: 2024-08-29_130853_views_clones_series_fragment.csv  2024-08-29_232049_views_clones_series_fragment.csv  2024-08-30_232159_top_paths_snapshot.csv  2024-08-30_232159_views_clones_series_fragment.csv  2024-08-31_231939_views_clones_series_fragment.csv  2024-09-01_231955_views_clones_series_fragment.csv  2024-09-02_232119_views_clones_series_fragment.csv  2024-09-03_232149_top_paths_snapshot.csv  2024-09-03_232149_views_clones_series_fragment.csv  2024-09-04_232127_top_paths_snapshot.csv  2024-09-04_232127_views_clones_series_fragment.csv  2024-09-05_232137_top_paths_snapshot.csv  2024-09-05_232137_views_clones_series_fragment.csv  2024-09-06_232300_views_clones_series_fragment.csv  2024-09-07_231934_views_clones_series_fragment.csv  2024-09-08_232318_top_paths_snapshot.csv  2024-09-08_232318_views_clones_series_fragment.csv  2024-09-09_232232_views_clones_series_fragment.csv  2024-09-11_232134_top_paths_snapshot.csv  (+793 more)
luarss/awesome-conference-dates/latest-report/: report.html  report.md  report_for_pdf.html
parsers/: chalmers.py  ieee_cas.py
